--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -84,3 +84,23 @@ jobs:
             --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64 \
             --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
           docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
+      - 
+        name: Cleanup tags
+        run: |
+          ACCESS_TOKEN=$(curl -X POST \
+            -H "Content-Type: application/json" \
+            -H "Accept: application/json" \
+            -d "{\"username\":\"${{ secrets.DOCKERHUB_USERNAME }}\",\"password\":\"${{ secrets.DOCKERHUB_TOKEN }}\"}" \
+            https://hub.docker.com/v2/users/login/ | jq --raw-output '.token')
+                    
+          PLATFORMS=("amd64" "arm64")
+          for PLATFORM in ${PLATFORMS[@]}; do
+            echo "Deleting tag: discordsearchscraper:${PLATFORM}"
+            
+            curl -X DELETE \
+              -H "Accept: application/json" \
+              -H "Authorization: JWT ${ACCESS_TOKEN}" \
+              https://hub.docker.com/v2/repositories/discordsearchscraper/tags/${PLATFORM}/
+          done
+
+        
