--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,19 +22,84 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4
       -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Build image (amd64)
+        uses: docker/build-push-action@v5
+        with:
+          file: ./Dockerfile
+          pull: false
+          push: false
+          load: true
+          tags: discordsearchscraper:amd64
+          platforms: linux/amd64
+      -
+        name: docker-slim (amd64)
+        uses: kitabisa/docker-slim-action@v1.1.1
+        env:
+          DSLIM_HTTP_PROBE: false
+          DSLIM_PULL: false
+          DSLIM_IMAGE_BUILD_ARCH: amd64
+        with:
+          target: discordsearchscraper:amd64
+          overwrite: true
+      -
+        name: Build image (arm64)
+        uses: docker/build-push-action@v5
+        with:
+          file: ./Dockerfile
+          pull: false
+          push: false
+          load: true
+          tags: discordsearchscraper:arm64
+          platforms: linux/arm64
+      -
+        name: docker-slim (arm64)
+        uses: kitabisa/docker-slim-action@v1.1.1
+        env:
+          DSLIM_HTTP_PROBE: false
+          DSLIM_PULL: false
+          DSLIM_IMAGE_BUILD_ARCH: arm64
+        with:
+          target: discordsearchscraper:arm64
+          overwrite: true
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        name: Push images to Docker Hub
+        run: |
+          docker tag discordsearchscraper:amd64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
+          docker tag discordsearchscraper:arm64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
       -
-        name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
-          platforms: linux/amd64,linux/arm64
+        name: Create and push manifest list
+        run: |
+          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest \
+            --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64 \
+            --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
+          docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
+      - 
+        name: Cleanup tags
+        run: |
+          ACCESS_TOKEN=$(curl -X POST \
+            -H "Content-Type: application/json" \
+            -H "Accept: application/json" \
+            -d "{\"username\":\"${{ secrets.DOCKERHUB_USERNAME }}\",\"password\":\"${{ secrets.DOCKERHUB_TOKEN }}\"}" \
+            https://hub.docker.com/v2/users/login/ | jq --raw-output '.token')
+                    
+          PLATFORMS=("amd64" "arm64")
+          for PLATFORM in ${PLATFORMS[@]}; do
+            echo "Deleting tag: discordsearchscraper:${PLATFORM}"
+            #curl -s -L -X DELETE "https://hub.docker.com/v2/namespaces/aamdigital/repositories/ndb-server/tags/%TAG" -H "Authorization: Bearer $token"
+            
+            curl -X DELETE \
+              -H "Accept: application/json" \
+              -H "Authorization: JWT ${ACCESS_TOKEN}" \
+              https://hub.docker.com/v2/namespaces/${{ secrets.DOCKERHUB_USERNAME }}/repositories/discordsearchscraper/tags/${PLATFORM}
+          done
