--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,6 +58,16 @@ jobs:
         with:
           target: ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
           overwrite: true
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Push images to Docker Hub
+        run: |
+          docker push ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
   manifest:
         runs-on: ubuntu-latest
         needs: build
@@ -72,19 +82,12 @@ jobs:
               username: ${{ secrets.DOCKERHUB_USERNAME }}
               password: ${{ secrets.DOCKERHUB_TOKEN }}
           -
-            name: Push images to Docker Hub
-            run: |
-              docker tag discordsearchscraper:amd64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
-              docker tag discordsearchscraper:arm64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
-              docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
-              docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
-          -
             name: Create and push manifest list
             run: |
-              docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest \
-                --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64 \
-                --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
-              docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
+              docker manifest create ${{ env.REGISTRY_IMAGE }}:latest \
+                --amend ${{ env.REGISTRY_IMAGE }}/discordsearchscraper:amd64 \
+                --amend ${{ env.REGISTRY_IMAGE }}/discordsearchscraper:arm64
+              docker manifest push ${{ env.REGISTRY_IMAGE }}:latest
           - 
             name: Cleanup tags
             run: |
