--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -75,12 +75,9 @@ jobs:
           -
             name: Checkout
             uses: actions/checkout@v4
-          -
-            name: Login to Docker Hub
-            uses: docker/login-action@v3
-            with:
-              username: ${{ secrets.DOCKERHUB_USERNAME }}
-              password: ${{ secrets.DOCKERHUB_TOKEN }}
+          -   
+            name: Login to DockerHub Registry
+            run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
           -
             name: Create and push manifest list
             run: |
