--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -81,9 +81,9 @@ jobs:
           -
             name: Create and push manifest list
             run: |
-              docker manifest create ${{ env.REGISTRY_IMAGE }}:latest \
-                --amend ${{ env.REGISTRY_IMAGE }}/discordsearchscraper:amd64 \
-                --amend ${{ env.REGISTRY_IMAGE }}/discordsearchscraper:arm64
+              docker manifest create --amend ${{ env.REGISTRY_IMAGE }}:latest \
+                ${{ env.REGISTRY_IMAGE }}/discordsearchscraper:amd64 \
+                ${{ env.REGISTRY_IMAGE }}/discordsearchscraper:arm64
               docker manifest push ${{ env.REGISTRY_IMAGE }}:latest
           - 
             name: Cleanup tags
