--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -82,8 +82,8 @@ jobs:
             name: Create and push manifest list
             run: |
               docker manifest create --amend ${{ env.REGISTRY_IMAGE }}:latest \
-                ${{ env.REGISTRY_IMAGE }}/discordsearchscraper:amd64 \
-                ${{ env.REGISTRY_IMAGE }}/discordsearchscraper:arm64
+                ${{ env.REGISTRY_IMAGE }}:amd64 \
+                ${{ env.REGISTRY_IMAGE }}:arm64
               docker manifest push ${{ env.REGISTRY_IMAGE }}:latest
           - 
             name: Cleanup tags
