--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           file: ./Dockerfile
           pull: false
-          push: false
+          push: true
           load: true
           tags: ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
           platforms: ${{ matrix.platform }}
@@ -56,7 +56,7 @@ jobs:
           DSLIM_PULL: false
           DSLIM_IMAGE_BUILD_ARCH: ${{ matrix.tag }}
         with:
-          target: ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
+          target: ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}-slim
           overwrite: true
       -
         name: Login to Docker Hub
@@ -67,7 +67,7 @@ jobs:
       -
         name: Push images to Docker Hub
         run: |
-          docker push ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
+          docker push ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}-slim
   manifest:
         runs-on: ubuntu-latest
         needs: build
@@ -85,6 +85,13 @@ jobs:
                 ${{ env.REGISTRY_IMAGE }}:amd64 \
                 ${{ env.REGISTRY_IMAGE }}:arm64
               docker manifest push ${{ env.REGISTRY_IMAGE }}:latest
+          -
+            name: Create and push manifest list (slim)
+            run: |
+              docker manifest create --amend ${{ env.REGISTRY_IMAGE }}:latest-slim \
+                ${{ env.REGISTRY_IMAGE }}:amd64-slim \
+                ${{ env.REGISTRY_IMAGE }}:arm64-slim
+              docker manifest push ${{ env.REGISTRY_IMAGE }}:latest-slim
           - 
             name: Cleanup tags
             run: |
